--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </head>
     <body>
       <script src="sketch.js"></script>
-      <script src ="JS/Food.js"></script>
+      <script src ="Food.js"></script>
     </body>
   </html>
